# student-lab-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: create-release.yml  docker-build-lab-backend.yml  docker-build-lab-cleanup.yml  prod-build-backend.yml  prod-build-cleanup.yml  staging-build-backend.yml  staging-build-cleanup.yml
azure_lab_backend/: emailer.py  main.py  models.py  utils.py
iac/: README.md  backend.tf  cron-job.tf  istio-resources.tf  main.tf  outputs.tf  tls.tf  utils.tf  variables.tf
lab-backend/: README.md  azure_helpers.py  emailer.py  main.py  models.py  utils.py  verify_lab.py
lab-backend/lab_verify/azure/basic/: azure-basic.json  lab_spec.json  verify.py
lab-backend/lab_verify/azure/mk-7-01-ai/: lab_spec.json  verify.py
lab-backend/lab_verify/azure/mk-7-01-az-cli/: lab_spec.json
lab-backend/lab_verify/azure/mk-7-01-az-ps/: lab_spec.json  verify.py
lab-backend/lab_verify/azure/mk-7-01-lb/: lab_spec.json  verify.py
lab-cleanup-trigger/: Dockerfile  cleanup_trigger.py  pyproject.toml
lab-launcher/: lab-launcher.php
lab-launcher/admin/: courses-page.php  lab-admin-page.php  lab-launch-shortcode.php
lab-launcher/includes/: api-caller.php  enqueue.php  lab-launcher.css  settings.php  shortcode.php
page-guard/: page-guard.php  uninstall.php
wordpress/lab-launcher/: lab-launcher.php
wordpress/lab-launcher/admin/: lab-admin-page.php
wordpress/lab-launcher/includes/: lab-launcher.css  shortcode.php
wordpress/page-guard/: page-guard.php
wordpress/user-menu/: user-menu.php
(+8 files in other folders)
