[tool.poetry]
name = "student-lab-backend"
version = "0.1.0"
description = "Azure Lab Automation Backend"
authors = ["CloudSteak"]

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
redis = "^5.0.1"
python-dotenv = "^1.0.1"
sib-api-v3-sdk = "^7.0.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
httpx = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.10.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
