[project]
name = "lab-cleanup-trigger"
version = "0.1.0"
description = ""
authors = [
    {name = "the1bit",email = "tibor.kiss@cloudmentor.hu"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
